@@ -722,7 +722,7 @@
          <p><a name="schedule"><span class="small">Schedule</span><br/>
          CruiseControl allows the user to schedule an arbitrary number of builds, either on interval or triggered to run at a given date/time, as well as pause intervals during which no builds will be run. Be aware that builds will only run if modifications are found (or build is forced from JMX interface). Because of this it is usually not a good idea to mix time builds and multiple builds in the same project as the multiple builds will "eat" all the changes before they can be detected by the time based builds.</p>
 
-	<p><b>Note:</b> Only one builder is used for a given interval where modifications are found. Builds using the time attribute take precidence or builds using the multiple attribute. If no matching time builds are found the multiple builds are evaluated <u>in the order they appear in the file</u>, so a multiple='1' on the first builder will hide all the subsequent builders.</p>
+	<p><b>Note:</b> Only one builder is used for a given interval where modifications are found. Builds using the time attribute take precidence over builds using the multiple attribute. If no matching time builds are found the multiple builds are evaluated <u>in the order they appear in the file</u>, so a multiple='1' on the first builder will hide all the subsequent builders.</p>
 
          <table cellpadding="3" cellspacing="1" border="0">
             <tr>
@@ -733,7 +733,7 @@
             <tr>
                <td class="tabledata">interval</td>
                <td class="tabledata">No</td>
-               <td class="tabledata">Interval period in seconds. Default value is 300 (five minutes). Maximum value is 31536000 (one year), but for the bulders that ship with CruiseControl the maximum practical value is 604800 (one week).</td>
+               <td class="tabledata">Interval period in seconds. Default value is 300 (five minutes). Maximum value is 31536000 (one year), but for the bulders that ship with CruiseControl the maximum practical value is 604800 (one week). Ignored if schedule only has time based builders.</td>
             </tr>
          </table>
 
